--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,6 +1,6 @@
 #menu ul li a {
     padding: 2px 10px;
-    display: inline-block;
+    display: inline-flex;
 
     /* visual do link */
     background-color:#EDEDED;
@@ -14,6 +14,14 @@
     color: #6D6D6D;
     border-bottom:3px solid #040729;
 }
+
+
+
+nav{
+    display: inline-flex;
+}
+
+
 
 #menu ul li { display: inline; }
 
@@ -50,3 +58,5 @@ main{
 margin-left: 10em;
 font-size: 18px;
 } 
+
+
