--- a/view/css/style.css
+++ b/view/css/style.css
@@ -57,6 +57,28 @@ main{
 .body-text {
     margin-left: 10em;
     font-size: 18px;
-} 
+}
+
+#tabela {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    }
+
+    #tabela td, #tabela th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    }
+
+    #tabela tr:nth-child(even){background-color: #f2f2f2;}
+
+    #tabela tr:hover {background-color: #ddd;}
+
+    #tabela th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color:rgba(0, 139, 139, 0.5);
+    color:
 
 
